<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_show_all_duty"
        android:summary="Auswählen um die Dienste aller Minis anzuzeigen"
        android:title="@string/all_duty_prompt" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_enable_alarm"
        android:summary="Auswählen um die automatische Erinnerung zu aktivieren"
        android:title="@string/alarm_prompt" />

    <ListPreference
        android:defaultValue="24"
        android:dependency="@string/pref_enable_alarm"
        android:dialogTitle="Synchronisierungs Intervall"
        android:entries="@array/update_freq_options"
        android:entryValues="@array/update_freq_values"
        android:key="@string/pref_update_freq"
        android:summary="Zeit zwischen automatisierten Updates des Miniplans"
        android:title="@string/update_freq_prompt" />

    <ListPreference
        android:defaultValue="15"
        android:dependency="@string/pref_enable_alarm"
        android:dialogTitle="Vorher benachrichtigen"
        android:entries="@array/alarm_grace_options"
        android:entryValues="@array/alarm_grace_values"
        android:key="@string/pref_alarm_grace"
        android:summary="Zeit zwischen Benachrichtigung und Gottesdienstbeginn"
        android:title="@string/alarm_grace_period" />

    <EditTextPreference
        android:defaultValue="https://majo-minis.de/App/Handy"
        android:key="PREF_SERVER_ENDPOINT"
        android:summary="Die Miniplan Server URL für Android Apps"
        android:title="Server Endpoint" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="PREF_DEBUG_MODE_ENABLED"
        android:summary="Enable/Disable debug mode"
        android:title="Debug Mode" />
</PreferenceScreen>